# linear-regres

./: README.md  pyproject.toml  regression.ipynb
