[tool.poetry]
name = "linear-regres"
version = "0.1.0"
description = ""
authors = ["will-ing <will-ing@github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.0"
matplotlib = "^3.2.2"
jupyterlab = "^2.1.5"
pandas = "^1.0.5"
pylint = "^2.5.3"
pytest = "^5.4.3"
sklearn = "^0.0"
scipy = "^1.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
